--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,45 @@
+# Hyperf
+/runtime/
+/bootstrap.php
+
+# Composer
 /vendor/
-node_modules/
-npm-debug.log
-yarn-error.log
+composer.lock
 
-# Laravel 4 specific
-bootstrap/compiled.php
-app/storage/
-
-# Laravel 5 & Lumen specific
-public/storage
-public/hot
-
-# Laravel 5 & Lumen specific with changed public path
-public_html/storage
-public_html/hot
-
-storage/*.key
+# Environment
 .env
-Homestead.yaml
-Homestead.json
-/.vagrant
+.env.local
+.env.*.local
+
+# IDE
+/.idea/
+/.vscode/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Logs
+*.log
+/logs/
+
+# Cache
+/cache/
+
+# Storage (exceto estrutura)
+/storage/*
+!/storage/.gitkeep
+
+# Docker
+docker-compose.override.yml
+
+# Test
+/coverage/
 .phpunit.result.cache
 
-/public/build
-/storage/pail
-.env.backup
-.env.production
-.phpactor.json
-auth.json
+# Temporary files
+*.tmp
+*.temp
