--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 APP_NAME=HyperfPixExample
 APP_ENV=dev
+APP_KEY=base64:AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=
+APP_TIMEZONE=America/Sao_Paulo
 
 DB_DRIVER=mysql
 DB_HOST=localhost
