Hyperf PIX Example

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+# Hyperf
 APP_NAME=HyperfPixExample
 APP_ENV=dev
 APP_KEY=base64:AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=
@@ -13,8 +14,7 @@ DB_CHARSET=utf8mb4
 DB_COLLATION=utf8mb4_unicode_ci
 DB_PREFIX=
 
-
-
+# Redis
 REDIS_HOST=localhost
 REDIS_AUTH=
 REDIS_PORT=6379
@@ -33,3 +33,10 @@ MAIL_FROM_NAME="Hyperf PIX"
 # Application
 PIX_SCHEDULE_MAX_DAYS=7
 PIX_ALLOWED_TYPES=email
+
+# Docker Configuration
+APP_PORT=9501
+NGINX_PORT=8080
+MYSQL_PORT=3306
+MAILHOG_SMTP_PORT=1025
+MAILHOG_WEB_PORT=8025
