--- a/.env.example
+++ b/.env.example
@@ -8,8 +8,8 @@ DB_DRIVER=mysql
 DB_HOST=localhost
 DB_PORT=3306
 DB_DATABASE=hyperf
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=hyperf
+DB_PASSWORD=hyperf
 DB_CHARSET=utf8mb4
 DB_COLLATION=utf8mb4_unicode_ci
 DB_PREFIX=
