--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,11 @@ services:
       dockerfile: Dockerfile
     container_name: hyperf-pix-example-app
     restart: unless-stopped
+    user: "1000:1000"
     ports:
       - "${APP_PORT}:9501"
     volumes:
-      - .:/opt/www
+      - .:/opt/www cached
       - ./storage:/opt/www/storage
     environment:
       - APP_NAME=${APP_NAME}
@@ -108,8 +109,8 @@ services:
       dockerfile: Dockerfile
     container_name: hyperf-pix-example-cron
     restart: unless-stopped
+    user: "1000:1000"
     volumes:
-      - .:/opt/www
       - ./storage:/opt/www/storage
     environment:
       - APP_NAME=${APP_NAME}
